--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -12,7 +12,7 @@
     <Compile Include="WishList.fs" />
     <Compile Include="Storage/DefaultWishList.fs" />
     <Compile Include="Storage/FileSystem.fs" />
-    <Compile Include="Storage/AzureTables.fs" />
+    <Compile Include="Storage/AzureTable.fs" />
     <Compile Include="Storage/WebJobs.fs" />
     <Compile Include="WebServer.fs" />
     <Compile Include="Program.fs" />
