--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,7 +5,7 @@
   <ItemGroup>
     <Compile Include="ReleaseNotes.fs" />
     <Compile Include="../Server/Shared/Domain.fs" />
-    <Compile Include="Page.fs" />
+    <Compile Include="Pages.fs" />
     <Compile Include="Style.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="pages/Menu.fs" />
