--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -6,6 +6,7 @@
     <Compile Include="ReleaseNotes.fs" />
     <Compile Include="../Server/Shared/Domain.fs" />
     <Compile Include="Pages.fs" />
+    <Compile Include="../Server/Shared/ServerUrls.fs" />
     <Compile Include="Style.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="pages/Menu.fs" />
