--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Storage/FileSystem.fs" />
     <Compile Include="Storage/AzureTable.fs" />
     <Compile Include="Storage/WebJobs.fs" />
+    <Compile Include="Database.fs" />
     <Compile Include="WebServer.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
