--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Style.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="pages/Menu.fs" />
+    <Compile Include="pages/Home.fs" />
     <Compile Include="pages/WishList.fs" />
     <Compile Include="pages/Login.fs" />
     <Compile Include="App.fs" />
