--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -9,7 +9,7 @@
     <Compile Include="Pages.fs" />
     <Compile Include="Style.fs" />
     <Compile Include="Utils.fs" />
-    <Compile Include="pages/Menu.fs" />
+    <Compile Include="views/Menu.fs" />
     <Compile Include="pages/Home.fs" />
     <Compile Include="pages/WishList.fs" />
     <Compile Include="pages/Login.fs" />
