menu is a view without own state

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -8,11 +8,12 @@
     <Compile Include="../Server/Shared/ServerUrls.fs" />
     <Compile Include="Pages.fs" />
     <Compile Include="Style.fs" />
-    <Compile Include="Utils.fs" />
+    <Compile Include="ClientTypes.fs" />
     <Compile Include="views/Menu.fs" />
     <Compile Include="pages/Home.fs" />
     <Compile Include="pages/WishList.fs" />
     <Compile Include="pages/Login.fs" />
+    <Compile Include="Utils.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
