--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "16.2.0",
     "react-bootstrap": "0.32.0",
     "react-dom": "16.2.0",
-    "remotedev": "0.2.7"
+    "remotedev": "0.2.7",
+    "semantic-ui-less": "^2.2.12"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
@@ -14,8 +15,14 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "concurrently": "3.5.1",
+    "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
     "fable-loader": "1.1.6",
     "fable-utils": "1.0.6",
+    "file-loader": "^1.1.6",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "url-loader": "^0.6.2",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.1"
   },
