Using nuget packages

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-runtime": "6.26.0",
+    "phantomjs-prebuilt": "^2.1.16",
     "react": "16.2.0",
     "react-bootstrap": "0.32.1",
     "react-dom": "16.2.0",
