--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -8,11 +8,14 @@
     <DefineConstants>TRACE;DEBUG</DefineConstants>
   </PropertyGroup>
 
+
+  <PropertyGroup Condition="'$(Configuration)'=='DebugSSR'">
+    <DefineConstants>TRACE;DEBUG;DEBUG_SSR</DefineConstants>
+  </PropertyGroup>
+
   <Import Project="../Shared/Shared.props" />
 
   <ItemGroup>
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React/Fable.Helpers.ReactServer.fs" />
-
     <Compile Include="ServerTypes.fs" />
     <Compile Include="JsonWebToken.fs" />
     <Compile Include="FableJson.fs" />
