--- a/src/Shared/Client.props
+++ b/src/Shared/Client.props
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <ItemGroup>
-    <Compile Include="../Client/ReleaseNotes.fs" />
-    <Compile Include="../Client/Pages.fs" />
-    <Compile Include="../Client/Style.fs" />
-    <Compile Include="../Client/views/Menu.fs" />
-    <Compile Include="../Client/pages/Home.fs" />
-    <Compile Include="../Client/pages/WishList.fs" />
-    <Compile Include="../Client/pages/Login.fs" />
-    <Compile Include="../Client/Shared.fs" />
+    <Compile Include="../Client/ReleaseNotes.fs" Watch="false" />
+    <Compile Include="../Client/Pages.fs" Watch="false" />
+    <Compile Include="../Client/Style.fs" Watch="false" />
+    <Compile Include="../Client/views/Menu.fs" Watch="false" />
+    <Compile Include="../Client/pages/Home.fs" Watch="false" />
+    <Compile Include="../Client/pages/WishList.fs" Watch="false" />
+    <Compile Include="../Client/pages/Login.fs" Watch="false" />
+    <Compile Include="../Client/Shared.fs" Watch="false" />
   </ItemGroup>
 </Project>
