--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "devDependencies": {
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.3",
+    "babel-loader": "7.1.4",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "concurrently": "3.5.1",
     "fable-loader": "1.1.6",
     "fable-utils": "1.0.6",
-    "webpack": "4.0.1",
+    "webpack": "4.1.0",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-server": "3.1.0"
   },
   "scripts": {
