Include Chrome in TravisCI build (untested)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     packages:
       - libstdc++-4.9-dev
       - libunwind8-dev
+    chrome: stable
 
 before_install:
   - chmod +x build.sh
