Try the beta of Chrome for TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
     packages:
       - libstdc++-4.9-dev
       - libunwind8-dev
-    chrome: stable
+    chrome: beta
 
 before_install:
   - chmod +x build.sh
