--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -15,7 +15,6 @@
     <Compile Include="JsonWebToken.fs" />
     <Compile Include="FableJson.fs" />
     <Compile Include="Auth.fs" />
-    <Compile Include="WishList.fs" />
     <Compile Include="Storage/Defaults.fs" />
     <Compile Include="Storage/FileSystem.fs" />
     <Compile Include="Storage/AzureTable.fs" />
@@ -23,6 +22,7 @@
     <Compile Include="Database.fs" />
     <Compile Include="Templates.fs" />
     <Compile Include="Pages.fs" />
+    <Compile Include="Remote.fs" />
     <Compile Include="WebServer.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
