--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 # Auto detect text files
 * text=auto
 
+*.sh text eol=lf
+
 # Custom for Visual Studio
 *.cs diff=csharp text=auto eol=lf
 *.vb diff=csharp text=auto eol=lf
