Start works to support Fable 2. SSR target seems ok

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.7.0",
     "concurrently": "3.6.0",
-    "fable-loader": "1.1.6",
-    "fable-utils": "1.0.6",
-    "webpack": "4.15.1",
+    "fable-loader": "^2.0.0-alpha-003",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "4.16.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "3.1.4"
   },
