--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -7,7 +7,7 @@
     <Compile Include="../Server/Shared/Domain.fs" />
     <Compile Include="../Server/Shared/ServerUrls.fs" />
     <Compile Include="Pages.fs" />
-    <Compile Include="Style.fs" />
+    <Compile Include="Styles.fs" />
     <Compile Include="views/Menu.fs" />
     <Compile Include="pages/Home.fs" />
     <Compile Include="pages/NewBook.fs" />
