--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -6,6 +6,7 @@
     <Compile Include="ReleaseNotes.fs" />
     <Compile Include="../Server/Shared/Domain.fs" />
     <Compile Include="../Server/Shared/ServerUrls.fs" />
+    <Compile Include="LocalStorage.fs" />
     <Compile Include="Pages.fs" />
     <Compile Include="Styles.fs" />
     <Compile Include="views/Menu.fs" />
@@ -13,7 +14,7 @@
     <Compile Include="pages/NewBook.fs" />
     <Compile Include="pages/WishList.fs" />
     <Compile Include="pages/Login.fs" />
-    <Compile Include="Shared.fs" />  
+    <Compile Include="Shared.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
