--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "private": true,
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
-    "react": "16.6.3",
-    "react-bootstrap": "0.32.4",
-    "react-dom": "16.6.3",
-    "remotedev": "0.2.8",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "react": "16.8.6",
+    "react-bootstrap": "1.0.0-beta.8",
+    "react-dom": "16.8.6",
+    "remotedev": "0.2.9",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "babel-loader": "^8.0.0",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-loader": "^8.0.5",
     "concurrently": "4.1.0",
     "fable-compiler": "2.2.3",
     "fable-loader": "2.1.6",
-    "terser-webpack-plugin": "^1.1.0",
-    "webpack": "4.27.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.10"
+    "terser-webpack-plugin": "^1.2.3",
+    "webpack": "4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "3.3.1"
   },
   "scripts": {
     "prebuildServer": "dotnet restore src/Server/Server.fsproj",
