--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="../Client/ReleaseNotes.fs" />
     <Compile Include="../Client/Pages.fs" />
     <Compile Include="../Client/Styles.fs" />
+    <Compile Include="../Client/views/Utils.fs" />
     <Compile Include="../Client/views/Menu.fs" />
     <Compile Include="../Client/pages/Home.fs" />
     <Compile Include="../Client/pages/NewBook.fs" />
