--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
-service: suave-fable
+service: giraffe-fable
 runtime: custom
 env: flex
 health_check:
   enable_health_check: False
 env_variables:
-  SUAVE_FABLE_PORT: '8080'
+  GIRAFFE_FABLE_PORT: '8080'
