Update to .NET 6 and FAKE 6 (probably with more left to fix)
Build script at least compiles and launches under FAKE 6 now - there are just other app build issues to work through now

--- a/test/UITests/UITests.fsproj
+++ b/test/UITests/UITests.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net461</TargetFramework>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Tests.fs" />
