--- a/update/src/Client/Client.fsproj
+++ b/update/src/Client/Client.fsproj
@@ -9,15 +9,7 @@
         <None Include="tailwind.config.js" />
         <None Include="index.html" />
         <None Include="paket.references" />
-        <Compile Include="Pages.fs" />
-        <Compile Include="LocalStorage.fs" />
-        <Compile Include="Styles.fs" />
-        <Compile Include="views/Utils.fs" />
-        <Compile Include="views/Menu.fs" />
-        <Compile Include="pages/Home.fs" />
-        <Compile Include="pages/NewBook.fs" />
-        <Compile Include="pages/Login.fs" />
-        <Compile Include="pages/WishList.fs" />
+        <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
         <None Include="vite.config.mts" />
     </ItemGroup>
