skeleton base page/daisy ui added

--- a/update/src/Client/Client.fsproj
+++ b/update/src/Client/Client.fsproj
@@ -9,6 +9,7 @@
         <None Include="tailwind.config.js" />
         <None Include="index.html" />
         <None Include="paket.references" />
+        <Compile Include="Pages\Home.fs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
         <None Include="vite.config.mts" />
