--- a/update/package.json
+++ b/update/package.json
@@ -13,6 +13,7 @@
         "@types/node": "^20.9.1",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.16",
+        "daisyui": "^4.6.0",
         "postcss": "^8.4.31",
         "remotedev": "^0.2.9",
         "sass": "^1.69.5",
