add Home/Login navigation and pages

--- a/update/src/Client/Client.fsproj
+++ b/update/src/Client/Client.fsproj
@@ -9,7 +9,8 @@
         <None Include="tailwind.config.js" />
         <None Include="index.html" />
         <None Include="paket.references" />
-        <Compile Include="Pages\Home.fs" />
+        <Compile Include="pages\Home.fs" />
+        <Compile Include="pages\Login.fs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
         <None Include="vite.config.mts" />
