login and return a token

--- a/update/src/Client/Client.fsproj
+++ b/update/src/Client/Client.fsproj
@@ -9,6 +9,8 @@
         <None Include="tailwind.config.js" />
         <None Include="index.html" />
         <None Include="paket.references" />
+        <Compile Include="LocalStorage.fs" />
+        <Compile Include="SAFE.fs" />
         <Compile Include="pages\Home.fs" />
         <Compile Include="pages\Login.fs" />
         <Compile Include="Index.fs" />
