--- a/update/src/Server/Server.fsproj
+++ b/update/src/Server/Server.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
+    <Compile Include="SAFE.fs" />
+    <Compile Include="Authorise.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
   <ItemGroup>
