--- a/update/package.json
+++ b/update/package.json
@@ -7,13 +7,15 @@
     "scripts": {},
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "sweetalert2": "^8.19.1"
     },
     "devDependencies": {
         "@types/node": "^20.9.1",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.16",
         "daisyui": "^4.6.0",
+        "mocha": "^8.3.2",
         "postcss": "^8.4.31",
         "remotedev": "^0.2.9",
         "sass": "^1.69.5",
