wishlist view and initial data

--- a/update/src/Client/Client.fsproj
+++ b/update/src/Client/Client.fsproj
@@ -13,6 +13,7 @@
         <Compile Include="SAFE.fs" />
         <Compile Include="pages\Home.fs" />
         <Compile Include="pages\Login.fs" />
+        <Compile Include="pages\Wishlist.fs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
         <None Include="vite.config.mts" />
