--- a/update/docker-compose.yml
+++ b/update/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
     azurite:
         image: mcr.microsoft.com/azure-storage/azurite
-        container_name: azurite-${COMPOSE_PROJECT_NAME}
+        container_name: azurite
+        entrypoint: azurite mcr.microsoft.com/azure-storage/azurite -l /data --blobHost 0.0.0.0 --tableHost 0.0.0.0 --skipApiVersionCheck
         ports:
             - "10000:10000"
             - "10001:10001"
