background service to reset database/blob storage working

--- a/update/src/Server/Server.fsproj
+++ b/update/src/Server/Server.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="SAFE.fs" />
     <Compile Include="Authorise.fs" />
     <Compile Include="Storage.fs" />
+    <Compile Include="ResetStorage.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
   <ItemGroup>
