--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        ref: v5-update-build
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
