--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,13 +12,20 @@ jobs:
     - uses: actions/checkout@v3
       with:
         ref: v5-update-build
+        
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
+        
     - name: Restore tools
       working-directory: ./update
       run: dotnet tool restore
+      
     - name: Test
       working-directory: ./update
       run: dotnet run devopstests
+    - name: Bundle
+    
+      working-directory: ./update
+      run: dotnet run bundle
