--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,3 +29,8 @@ jobs:
     
       working-directory: ./update
       run: dotnet run bundle
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
