--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -34,3 +34,7 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy
+      working-directory: ./update
+      run: dotnet run bundle
