--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
       - master
 
 jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Azure Login
       uses: azure/login@v1
       with:
