--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,12 +24,14 @@ jobs:
       run: dotnet tool restore
 
   test:
+    runs-on: ubuntu-latest
     steps:
     - name: Test
       working-directory: ./update
       run: dotnet run devopstests
 
   build:
+    runs-on: ubuntu-latest
     steps:
     - name: Build
       working-directory: ./update
