--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
     azurite:
         image: mcr.microsoft.com/azure-storage/azurite
-        container_name: azurite
+        container_name: safe-bookstore-azurite
         entrypoint: azurite mcr.microsoft.com/azure-storage/azurite -l /data --blobHost 0.0.0.0 --tableHost 0.0.0.0 --skipApiVersionCheck
         ports:
             - "10000:10000"
