renaming on wishlist module so it compiles on build machine

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -15,7 +15,7 @@
         <Compile Include="components\NewBook.fs" />
         <Compile Include="pages\Home.fs" />
         <Compile Include="pages\Login.fs" />
-        <Compile Include="pages\Wishlist.fs" />
+        <Compile Include="pages\WishList.fs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
         <None Include="vite.config.mts" />
