change deploy to be on release published

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
 name: Safe Bookstore deploy
 
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
   deploy:
@@ -11,12 +10,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-        
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
-        
+
     - name: Restore tools
       run: dotnet tool restore
 
