--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Test
       run: dotnet run devopstests
 
+    - name: Set app version
+      run: export APP_VERSION=${{ github.ref_name }}
+
     - name: Build
       run: dotnet run bundle
 
