install Feliz.UseElmish

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sweetalert2": "^8.19.1"
+        "sweetalert2": "^8.19.1",
+        "use-sync-external-store": "^1.2.0"
     },
     "devDependencies": {
         "@types/node": "^20.9.1",
